--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures-util = "0.3.26"
 isahc = {version="1.7.2", features=["json"]}
 log = "0.4.17"
 once_cell = "1.17.0"
+parking_lot = "0.12.1"
 rand = "0.8.5"
 scopeguard = "1.1.0"
 serde = {version="1.0.152", features=["derive"]}
