--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+acidjson = "0.1.2"
 anyhow = "1.0.68"
 argh = "0.1.10"
 chrono = "0.4.23"
