move to async_trait

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 acidjson = "0.1.2"
 anyhow = "1.0.68"
 argh = "0.1.10"
+async-trait = "0.1.68"
 chrono = "0.4.23"
 dashmap = "5.4.0"
 eff-wordlist = "1.0.2"
