--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 acidjson = "0.1.2"
 anyhow = "1.0.68"
 argh = "0.1.10"
+async-compat = "0.2.1"
 async-trait = "0.1.68"
 chrono = "0.4.23"
 dashmap = "5.4.0"
@@ -19,6 +20,7 @@ futures-util = "0.3.26"
 isahc = {version="1.7.2", features=["json"]}
 log = "0.4.17"
 once_cell = "1.17.0"
+openstack = "0.5.0"
 parking_lot = "0.12.1"
 rand = "0.8.5"
 scopeguard = "1.1.0"
