--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ smol = "1.3.0"
 smol-timeout = "0.6.0"
 
 sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "postgres", "chrono" ] }
+
+[profile.dev]
+panic = 'abort'
+
+[profile.release]
+panic = 'abort'
