--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rand = "0.8.5"
 scopeguard = "1.1.0"
 serde = {version="1.0.152", features=["derive"]}
 serde_json = "1.0.91"
+serde_urlencoded = "0.7.1"
 serde_yaml = "0.9.17"
 smol = "1.3.0"
 smol-timeout = "0.6.0"
